<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, TabBarExample!</string>
    <string name="app_name">Create Your Profile</string>
    <string name="reg_head">Registration Date</string>
    <string name="reg_centre">Registration Centre</string>
    <string name="personal">Personal Details</string>
    <string name="reg_id">Registration Id</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="role">Role</string>
    <string name="pick_date">Pick Date</string>
    <string name="dob">Date of Birth</string>
    <string name="mStatus">Marital Status</string>
    <string name="pNo">Phone Number</string>
    <string name="insurance">Has Insurance?</string>
    <string name="qualification">Qualification</string>
    <string name="lang">Languages Known</string>
    <string name="city">Address : City/Village</string>
    <string name="state">Address : State</string>
    <string name="dependentMembers">How many dependent Family Members</string>
    <string name="drivingLicenceNo">Driving Licence Number</string>
    <string name="drivingLicenceExpiryDate">Driving Licence Expiry Date</string>
    <string name="experience">Years of Driving Experience</string>
    <string name="drivingVehicleType">Vehicle Type Currently Driving</string>
    <string name="vehicleBrand">Vehicle Brand Currently Driving</string>
    <string name="employmentType">Employment Type</string>
    <string name="region">Driving Region</string>
    <string name="avgTrips">Average Trips / Month</string>
    <string name="avgKMS">Average KMS / Month</string>
    <string name="days">Working days in a Week</string>
    <string name="restPlace">Resting Places</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="pulseWaveSym">PulseWave Symbolic(mmHg)</string>
    <string name="pulseWaveDia">PulseWave Diastolic(mmHg)</string>
    <string name="pulseWavePRA">PulseWave PRA(/min)</string>
    <string name="pulseWavePRV">PulseWave PRV(%)</string>
    <string name="avgBreathingRate">Average Breathing Rate(/min)</string>
    <string name="anomoly">Total Anomoly Score(%)</string>
    <string name="oximeter">Oximeter Oxygen Saturator SPO2</string>
    <string name="bloodSuger">Blood Suger(mg/dL)</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="sponsor">Sponsor Name</string>
    <string name="eventName">Event Name</string>
    <string name="centre1">Driver Development Lab(Sonepat)</string>
    <string name="sponsor1">TransportMitra</string>
    <string name="qualification1">Below 10th</string>
    <string name="qualification2">Below 12th</string>
    <string name="qualification3">Below Degree</string>
    <string name="vtype1">Mini Truck</string>
    <string name="vtype2">Other</string>
    <string name="brand1">TATA</string>
    <string name="brand2">Mahindra</string>
    <string name="brand3">Swaraj</string>
    <string name="brand4">Other</string>
    <string name="etype1">Employee</string>
    <string name="etype2">Owner</string>
    <string name="etype3">Contract</string>
    <string name="etype4">Other</string>
    <string name="region1">North India</string>
    <string name="region2">East India</string>
    <string name="region3">West India</string>
    <string name="region4">South India</string>
    <string name="region5">Other</string>
    <string name="place1">Inside Vehicle</string>
    <string name="place2">Truck Terminal</string>
    <string name="place3">Dhabha</string>
    <string name="place4">Factory Gate</string>
    <string name="place5">Other</string>
    <string name="title_activity_fifth_tab">FifthTab</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>