<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/personalDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/personal"
                
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/regId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/reg_id"
                android:textSize="15sp"
               />


            <EditText
                android:id="@+id/regIdET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10"
                android:inputType="numberPassword">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/fName"
                android:textSize="15sp"
               />

            <EditText
                android:id="@+id/fNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:hint=""
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/lName"
                android:textSize="15sp"
            />

            <EditText
                android:id="@+id/lNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/role"
                android:textSize="15sp"
              />

            <RadioGroup
                android:id="@+id/roleRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Driver" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cleaner" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Other" />
            </RadioGroup>

            <EditText
                android:id="@+id/roleET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10" />

            <TextView
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/dob"
                android:textSize="15sp"
           />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:onClick="showDatePickerDialog"
                android:text="@string/pick_date" />

            <TextView
                android:id="@+id/maritalStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/mStatus"
                android:textSize="15sp"
             />

            <RadioGroup
                android:id="@+id/maritalStatusRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radio3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Single" />

                <RadioButton
                    android:id="@+id/radio4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Married" />
            </RadioGroup>

            <TextView
                android:id="@+id/pNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/pNo"
                android:textSize="15sp"
      />

            <EditText
                android:id="@+id/pNoET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/hasInsurance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/insurance"
                android:textSize="15sp"
          />

            <RadioGroup
                android:id="@+id/insuranceRGr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radio5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/radio6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/qualification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/qualification"
                android:textSize="15sp"
             />

            <Spinner
                android:id="@+id/qualificationS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"

                android:entries="@array/qualification" />

            <TextView
                android:id="@+id/languagesKnown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/lang"
                android:textSize="15sp"
             />

            <RadioGroup
                android:id="@+id/languageRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/radio7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Hindi" />

                <RadioButton
                    android:id="@+id/radio8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="English" />

                <RadioButton
                    android:id="@+id/radio9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Other" />
            </RadioGroup>

            <EditText
                android:id="@+id/langET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/city"
                android:textSize="15sp"
                />

            <EditText
                android:id="@+id/cityET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10" />

            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/state"
                android:textSize="15sp"
              />

            <EditText
                android:id="@+id/stateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10" />

            <TextView
                android:id="@+id/dependentMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/dependentMembers"
                android:textSize="15sp"
          />

            <EditText
                android:id="@+id/dependentMembersET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="20dp"
                
                android:ems="10" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>