<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/height"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/heightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/weight"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/weightET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/pulseWaveSym"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/pulseWaveSym"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/pulseWaveSymET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/pulseWaveDia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/pulseWaveDia"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/pulseWaveDiaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/pulseWavePRA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/pulseWavePRA"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/pulseWavePRAET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/pulseWavePRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/pulseWavePRV"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/pulseWavePRVET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/avgBreathingRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/avgBreathingRate"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/avgBreathingRateET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/anomoly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/anomoly"
                android:textSize="15sp" 
                />

            <EditText
                android:id="@+id/anomolyET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/oximeter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/oximeter"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/oximeterET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/bloodSuger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/bloodSuger"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/bloodSugerET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"

                android:ems="10"
                android:inputType="numberDecimal" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/bloodGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/bloodGroup"
                android:textSize="15sp"

                />

            <EditText
                android:id="@+id/bloodGroupET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="50dp"

                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>
    </ScrollView>

</LinearLayout>